fix: add z-index

--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -2,4 +2,5 @@
     opacity: 1;
     visibility: visible;
     transition: visibility .3s linear 0s, opacity .3s linear;
+    z-index: 1;
 }
