--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,4 +9,5 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
     transition: visibility 0s linear .3s, opacity .3s linear;
+    z-index: -1;
 }
